# progetto-infanzia

./: .dockerignore  .env.example  .gitignore  .tmp-loonex-index.html  README.md  fly.web-api.toml  index.html  package-lock.json  package.json  railway.toml  release-notes.md  vercel.json  vite.config.ts  vite.dev-proxy.ts
.tmp-homepage-ref/: extract-dom.mjs  home-dom.txt
.tmp-lordflix-zip/: analyze_ambient.py  analyze_lordflix2.py  card_extract.py  card_title.py  extract_snippets.py
.tmp-movies-ref/: aurora-strings.txt  decode-aurora.mjs  decode-aurora2.mjs  extract-strings.mjs  extract-ui.mjs  live-movies.html
api/: _assetProxy.js  invoke.js
config/: vix-embed-hosts.json
src/: App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  probe_sc.rs  tauri.conf.json
src-tauri/bins/: export_sc_catalog_seed.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitignore
src-tauri/src/: achievements.rs  addon_proxy.rs  cast.rs  catalog_search.rs  db.rs  debrid.rs  dev_admin.rs  friend_presence.rs  html_text.rs  image_palette.rs  import_media.rs  lib.rs  loonex_catalog.rs  loonex_playback.rs  mangadex.rs  media_ops.rs  models.rs  network.rs  parental.rs  profile_avatar.rs  profiles.rs  saturn_catalog.rs  saturn_playback.rs  sc_catalog.rs  sc_playback.rs  sc_proxy.rs  scanner.rs  settings.rs  smart_search.rs  stream.rs  stremio.rs  tmdb.rs  torrent.rs  transcode.rs  vix_embed.rs  watch_party.rs  watcher.rs  web_invoke.rs  welib.rs  youtube_catalog.rs  (+1 more)
supabase/: schema.sql
tools/: debug-welib-md5.mjs  debug-welib-search.mjs  dev-api.mjs  parse-welib-md5.mjs  (+9 more)
(+393 files in other folders)
